# legal-rag-application

./: .funcignore  .gitignore  EXPLANATION.md  README.md  USER_MANUAL.md  function_app.py  host.json  local.settings.json.example  pyproject.toml  requirements.txt
Front_End_Application/: index.html  package-lock.json  package.json  script.js  server.js  style.css
data/knowledge_base/: employment_terms.md  nda_summary.md  privacy_policy.md
src/legal_rag_app/: __init__.py  agents.py  config.py  main.py  rag.py  storage.py
test_documents/: employment_contract.md  gdpr_compliance_policy.md  ip_assignment_agreement.md  nda_agreement.md  service_level_agreement.md
