[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-rag-app"
version = "0.1.0"
description = "Legal RAG multi-agent demo using AutoGen and Azure OpenAI"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]




